remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -389,7 +389,7 @@
                 "description": "Meet with Stack overflow",
                 "owner": "Andrew",
                 "project_name": "Executive Director",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-10-31",
