--- a/_data/projects.json
+++ b/_data/projects.json
@@ -447,14 +447,108 @@
     },
     {
         "name": "Project Template",
-        "milestones": [],
-        "description": "2020 Global Board Elections",
-        "leaders": [
+        "milestones": [
             {
-                "name": "Mike McCamon",
-                "email": "mike.mccamon@owasp.com"
+                "milestone_date": "2020-09-10",
+                "description": "Candidates announced via email and social media",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-09-15",
+                "description": "The top (6-7) questions from the community will be selected and shared with candidates",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-09-15",
+                "description": "Email Reminder regarding Membership is a required to vote",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-09-25",
+                "description": "Email Reminder regarding Membership is a required to vote",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-09-30",
+                "description": "Candidates to post their videos",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-09-30",
+                "description": "Paid membership deadline",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-10-01",
+                "description": "Recordings to be posted on website",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-10-01",
+                "description": "Email and social media notifying the community that the recordings are posted",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-10-15",
+                "description": "Voting opens",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-10-22",
+                "description": "Email reminder for voting",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-10-28",
+                "description": "Email reminder for voting",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-10-30",
+                "description": "Voting closes",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-10-31",
+                "description": "Results shared with all candidate",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-11-01",
+                "description": "Results shared via email and social media",
+                "owner": "Dawn Aitken",
+                "project_name": "Project Template",
+                "status": "future"
             }
         ],
+        "description": "2020 Global Board Elections * [https://owasp.org/www-board/elections/2020_elections]",
+        "leaders": [],
         "url": "https://owasp.org/www-staff/projects/202010-Global Board Elections"
     },
     {
