--- a/_data/projects.json
+++ b/_data/projects.json
@@ -125,22 +125,7 @@
     },
     {
         "name": "Virtual AppSec Days Summer of Security",
-        "milestones": [
-            {
-                "milestone_date": "2020-08-26",
-                "description": "Send Post Event Survey",
-                "owner": "Alonna",
-                "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-26",
-                "description": "Send Thank you email",
-                "owner": "Emily",
-                "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "overdue"
-            }
-        ],
+        "milestones": [],
         "description": "tle: Virtual AppSec Days Summer of Securitylayout: full-widthdate: June-August 2020---# Virtual AppSec Days Summer of Security  ```June 23 - 24, 2020July 28 - 29, 2020August 25 - 26, 2020```The OWASP Foundation is hosting Virtual Trainings during our Virtual AppSec Days Summer of Security events taking place June - August 2020.  The courses will be 8-hour virtual training courses. The courses will be offered in 4-hour blocks over 2 days. The trainings will begin at 12:00pm Eastern Time (USA)/6:00pm Central European Time.",
         "leaders": [
             {
@@ -189,30 +174,9 @@
                 "status": "overdue"
             },
             {
-                "milestone_date": "2020-08-20",
-                "description": "Social media scheduling issues",
-                "owner": "Andrew, Emily",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-27",
-                "description": "3 x Town Halls",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
                 "milestone_date": "2020-08-27",
                 "description": "Theme Calendar for Marketing",
                 "owner": "Andrew, Alonna",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "Schedule Board Virtual F2F",
-                "owner": "Andrew",
                 "project_name": "Executive Director",
                 "status": "overdue"
             },
@@ -260,13 +224,6 @@
             },
             {
                 "milestone_date": "2020-08-31",
-                "description": "General counsel retainer",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
                 "description": "Committees 2.0 gap analysis with Owen",
                 "owner": "Andrew",
                 "project_name": "Executive Director",
@@ -294,25 +251,11 @@
                 "status": "overdue"
             },
             {
-                "milestone_date": "2020-09-01",
-                "description": "Postpone the Dublin event event & transition sponsors",
-                "owner": "Emily, Kelly",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-01",
+                "milestone_date": "2020-09-15",
                 "description": "Review Events strategy",
                 "owner": "Andrew, Emily",
                 "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-01",
-                "description": "Review Content Marketing Strategy",
-                "owner": "Andrew, Alonna",
-                "project_name": "Executive Director",
-                "status": "overdue"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-01",
@@ -339,13 +282,6 @@
                 "milestone_date": "2020-09-22",
                 "description": "Update minutes from special Board meeting to reflect adjournment",
                 "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-09-22",
-                "description": "Policy Development and Review Process",
-                "owner": "Andrew, Sherif",
                 "project_name": "Executive Director",
                 "status": "on-time"
             },
@@ -430,6 +366,13 @@
                 "milestone_date": "2020-11-15",
                 "description": "Review trainer splits",
                 "owner": "Emily, Andrew",
+                "project_name": "Executive Director",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-12-31",
+                "description": "Review Content Marketing Strategy",
+                "owner": "Andrew, Alonna",
                 "project_name": "Executive Director",
                 "status": "future"
             },
@@ -555,16 +498,9 @@
         "name": "Global AppSec - Virtual",
         "milestones": [
             {
-                "milestone_date": "2020-09-15",
+                "milestone_date": "2020-09-20",
                 "description": "All recorded presentations collected",
                 "owner": "Alonna",
-                "project_name": "Global AppSec - Virtual",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-09-15",
-                "description": "Volunteers finalized and communication initiated",
-                "owner": "Emily",
                 "project_name": "Global AppSec - Virtual",
                 "status": "on-time"
             },
