--- a/_data/projects.json
+++ b/_data/projects.json
@@ -462,7 +462,7 @@
                 "description": "Voting opens",
                 "owner": "Dawn",
                 "project_name": "2020 Global Board Elections",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-10-22",
@@ -592,7 +592,7 @@
                 "description": "General Service Contract Signed",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2021",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-10-01",
