--- a/_data/projects.json
+++ b/_data/projects.json
@@ -167,65 +167,9 @@
                 "status": "overdue"
             },
             {
-                "milestone_date": "2020-08-27",
-                "description": "Theme Calendar for Marketing",
-                "owner": "Andrew, Alonna",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
                 "milestone_date": "2020-08-31",
                 "description": "nullcon / Paytou MoU",
                 "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "TWCSA MoU",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "Grants policy with Mike",
-                "owner": "Andrew, Mike",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "20th Anniversary planning and book first panel",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "Finalize Performance Reviews",
-                "owner": "Andrew, Mike",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "Corporate monthly subscription",
-                "owner": "Andrew, Harold, Kelly",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "Committees 2.0 gap analysis with Owen",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "Membership drive strategy",
-                "owner": "Andrew, Lisa",
                 "project_name": "Executive Director",
                 "status": "overdue"
             },
@@ -238,24 +182,17 @@
             },
             {
                 "milestone_date": "2020-08-31",
-                "description": "Additional trademarks",
-                "owner": "Andrew, Mike",
+                "description": "TWCSA MoU",
+                "owner": "Andrew",
                 "project_name": "Executive Director",
                 "status": "overdue"
             },
             {
-                "milestone_date": "2020-09-15",
-                "description": "Review Events strategy",
-                "owner": "Andrew, Emily",
+                "milestone_date": "2020-09-22",
+                "description": "2021 Operational Plan due for Board",
+                "owner": "Andrew",
                 "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-01",
-                "description": "Review Fundraising and Donations Strategy",
-                "owner": "Andrew, Mike",
-                "project_name": "Executive Director",
-                "status": "overdue"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-22",
@@ -266,22 +203,22 @@
             },
             {
                 "milestone_date": "2020-09-22",
-                "description": "Update minutes from special Board meeting to reflect adjournment",
+                "description": "Committees 2.0 rewrite with Owen",
                 "owner": "Andrew",
                 "project_name": "Executive Director",
                 "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-22",
-                "description": "Present 2021 Operational Plan",
+                "description": "New analytic traffics KPIs",
                 "owner": "Andrew",
                 "project_name": "Executive Director",
                 "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-22",
-                "description": "Present COVID Chapters and Events Strategy",
-                "owner": "Andrew, Emily, Lisa",
+                "description": "Policy Development and Review Process",
+                "owner": "Andrew, Sherif",
                 "project_name": "Executive Director",
                 "status": "on-time"
             },
@@ -294,17 +231,10 @@
             },
             {
                 "milestone_date": "2020-09-22",
-                "description": "Present OWASP Content Media Strategy with Outreach Committee",
-                "owner": "Andrew, Alonna",
+                "description": "Update minutes from special Board meeting to reflect adjournment",
+                "owner": "Andrew",
                 "project_name": "Executive Director",
                 "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-09-01",
-                "description": "Chapter and Event co-branding strategy",
-                "owner": "Andrew, Emily",
-                "project_name": "Executive Director",
-                "status": "overdue"
             },
             {
                 "milestone_date": "2020-09-30",
@@ -314,18 +244,39 @@
                 "status": "on-time"
             },
             {
-                "milestone_date": "2020-10-31",
+                "milestone_date": "2020-09-30",
+                "description": "Finalize Performance Reviews",
+                "owner": "Mike, Andrew",
+                "project_name": "Executive Director",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-10-20",
+                "description": "General counsel retainer",
+                "owner": "Andrew",
+                "project_name": "Executive Director",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-10-20",
+                "description": "Review Fundraising and Donations Strategy",
+                "owner": "Andrew, Mike",
+                "project_name": "Executive Director",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-10-28",
                 "description": "Mike's last day send off",
                 "owner": "Andrew, Mike",
                 "project_name": "Executive Director",
                 "status": "future"
             },
             {
-                "milestone_date": "2020-09-22",
-                "description": "New analytic traffics KPIs",
-                "owner": "Andrew",
+                "milestone_date": "2020-11-04",
+                "description": "AppSec Virtual Debrief",
+                "owner": "Emily, Alonna, Kelly, Andrew",
                 "project_name": "Executive Director",
-                "status": "on-time"
+                "status": "future"
             },
             {
                 "milestone_date": "2020-11-22",
@@ -336,36 +287,36 @@
             },
             {
                 "milestone_date": "2020-12-31",
-                "description": "OWASP Member Points",
-                "owner": "Andrew, Harold",
+                "description": "Corporate monthly subscription",
+                "owner": "Andrew, Harold, Kelly",
                 "project_name": "Executive Director",
                 "status": "future"
             },
             {
                 "milestone_date": "2020-12-31",
-                "description": "Operationalize quarterly OWASP training",
-                "owner": "Andrew, Emily",
-                "project_name": "Executive Director",
-                "status": "future"
-            },
-            {
-                "milestone_date": "2020-11-15",
-                "description": "Review trainer splits",
-                "owner": "Emily, Andrew",
+                "description": "Grants policy",
+                "owner": "Andrew",
                 "project_name": "Executive Director",
                 "status": "future"
             },
             {
                 "milestone_date": "2020-12-31",
-                "description": "Review Content Marketing Strategy",
-                "owner": "Andrew, Alonna",
+                "description": "Marketing: 20th Anniversary planning and book first panel",
+                "owner": "Andrew",
                 "project_name": "Executive Director",
                 "status": "future"
             },
             {
-                "milestone_date": "2021-01-05",
-                "description": "Review leadership promotion re: mediation",
-                "owner": "Harold, Andrew",
+                "milestone_date": "2020-12-31",
+                "description": "Marketing & Social media Strategy",
+                "owner": "Andrew, Emily, Alonna",
+                "project_name": "Executive Director",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-12-31",
+                "description": "Quarterly OWASP training",
+                "owner": "Emily",
                 "project_name": "Executive Director",
                 "status": "future"
             }
@@ -408,13 +359,6 @@
     {
         "name": "2020 Global Board Elections",
         "milestones": [
-            {
-                "milestone_date": "2020-09-15",
-                "description": "Email Reminder regarding Membership is a required to vote",
-                "owner": "Dawn",
-                "project_name": "2020 Global Board Elections",
-                "status": "overdue"
-            },
             {
                 "milestone_date": "2020-09-25",
                 "description": "Email Reminder regarding Membership is a required to vote",
@@ -501,11 +445,25 @@
         "name": "Associate Executive Director Off-boarding",
         "milestones": [
             {
-                "milestone_date": "2020-09-22",
-                "description": "Present to Board Trademark Line of Business Concept",
+                "milestone_date": "2020-10-05",
+                "description": "owasp.org domain automation",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
                 "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-10-10",
+                "description": "Complete Trademark Line of Business Concept for Board",
+                "owner": "Mike",
+                "project_name": "Associate Executive Director Off-boarding",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2020-10-20",
+                "description": "Present to Board Trademark Line of Business Concept",
+                "owner": "Mike",
+                "project_name": "Associate Executive Director Off-boarding",
+                "status": "future"
             }
         ],
         "description": "",
@@ -539,13 +497,6 @@
     {
         "name": "2020 Policy Review",
         "milestones": [
-            {
-                "milestone_date": "2020-09-15",
-                "description": "Present items 1-3 for Board approval",
-                "owner": "Mike",
-                "project_name": "2020 Policy Review",
-                "status": "overdue"
-            },
             {
                 "milestone_date": "2020-10-19",
                 "description": "Present items 4-9 for Board approval",
