remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -502,7 +502,7 @@
                 "description": "Present items 4-9 for Board approval",
                 "owner": "Mike",
                 "project_name": "2020 Policy Review",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-11-16",
