--- a/_data/projects.json
+++ b/_data/projects.json
@@ -333,7 +333,7 @@
                 "description": "All recorded presentations collected",
                 "owner": "Alonna",
                 "project_name": "Global AppSec - Virtual",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-10-01",
