remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -269,7 +269,7 @@
                 "description": "Mike's last day send off",
                 "owner": "Andrew, Mike",
                 "project_name": "Executive Director",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-11-04",
@@ -490,7 +490,7 @@
                 "description": "Email reminder for voting",
                 "owner": "Dawn",
                 "project_name": "2020 Global Board Elections",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-10-30",
@@ -686,7 +686,7 @@
                 "description": "Project \"A\" Complete ready for deployment",
                 "owner": "Christian",
                 "project_name": "ORG Domain Email Offboarding",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-09-29",
