remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -276,7 +276,7 @@
                 "description": "AppSec Virtual Debrief",
                 "owner": "Emily, Alonna, Kelly, Andrew",
                 "project_name": "Executive Director",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-11-22",
