--- a/_data/projects.json
+++ b/_data/projects.json
@@ -340,7 +340,7 @@
                 "description": "Determine off-boarding member from Copper process",
                 "owner": "Harold",
                 "project_name": "CRM Automation & Integration for Membership",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-10-16",
@@ -463,7 +463,7 @@
                 "description": "owasp.org domain automation",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-10-10",
@@ -644,7 +644,7 @@
                 "description": "Project \"B\" Complete ready for deployment",
                 "owner": "Christian",
                 "project_name": "ORG Domain Email Offboarding",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-10-07",
