remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -158,169 +158,7 @@
     },
     {
         "name": "Executive Director",
-        "milestones": [
-            {
-                "milestone_date": "2020-08-14",
-                "description": "Write WEF article",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "nullcon / Paytou MoU",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "OWASP Twenty Years",
-                "owner": "Andrew, Emily",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-08-31",
-                "description": "TWCSA MoU",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-22",
-                "description": "2021 Operational Plan due for Board",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-22",
-                "description": "Add bylaw and update other policies to prevent memberships being paid by Foundation",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-22",
-                "description": "Committees 2.0 rewrite with Owen",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-22",
-                "description": "New analytic traffics KPIs",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-22",
-                "description": "Policy Development and Review Process",
-                "owner": "Andrew, Sherif",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-22",
-                "description": "Project Sabbatical Plan",
-                "owner": "Andrew, Harold",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-22",
-                "description": "Update minutes from special Board meeting to reflect adjournment",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-30",
-                "description": "Meet with Stack overflow",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-30",
-                "description": "Finalize Performance Reviews",
-                "owner": "Mike, Andrew",
-                "project_name": "Executive Director",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-10-20",
-                "description": "General counsel retainer",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-10-20",
-                "description": "Review Fundraising and Donations Strategy",
-                "owner": "Andrew, Mike",
-                "project_name": "Executive Director",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-10-28",
-                "description": "Mike's last day send off",
-                "owner": "Andrew, Mike",
-                "project_name": "Executive Director",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-11-04",
-                "description": "AppSec Virtual Debrief",
-                "owner": "Emily, Alonna, Kelly, Andrew",
-                "project_name": "Executive Director",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-11-22",
-                "description": "2021 Budget",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "future"
-            },
-            {
-                "milestone_date": "2020-12-31",
-                "description": "Corporate monthly subscription",
-                "owner": "Andrew, Harold, Kelly",
-                "project_name": "Executive Director",
-                "status": "future"
-            },
-            {
-                "milestone_date": "2020-12-31",
-                "description": "Grants policy",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "future"
-            },
-            {
-                "milestone_date": "2020-12-31",
-                "description": "Marketing: 20th Anniversary planning and book first panel",
-                "owner": "Andrew",
-                "project_name": "Executive Director",
-                "status": "future"
-            },
-            {
-                "milestone_date": "2020-12-31",
-                "description": "Marketing & Social media Strategy",
-                "owner": "Andrew, Emily, Alonna",
-                "project_name": "Executive Director",
-                "status": "future"
-            },
-            {
-                "milestone_date": "2020-12-31",
-                "description": "Quarterly OWASP training",
-                "owner": "Emily",
-                "project_name": "Executive Director",
-                "status": "future"
-            }
-        ],
+        "milestones": [],
         "description": "This is the list of activities that Andrew van der Stock, Executive Director is either doing or monitoring.",
         "leaders": [],
         "url": "https://owasp.org/www-staff/projects/202008-ExecDirector"
@@ -459,15 +297,15 @@
         "name": "Associate Executive Director Off-boarding",
         "milestones": [
             {
-                "milestone_date": "2020-10-05",
-                "description": "owasp.org domain automation",
+                "milestone_date": "2020-10-15",
+                "description": "Complete Trademark Line of Business Concept for Board",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
-                "status": "overdue"
+                "status": "on-time"
             },
             {
-                "milestone_date": "2020-10-10",
-                "description": "Complete Trademark Line of Business Concept for Board",
+                "milestone_date": "2020-10-19",
+                "description": "owasp.org domain automation",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
                 "status": "on-time"
@@ -612,20 +450,6 @@
         "name": "ORG Domain Email Offboarding",
         "milestones": [
             {
-                "milestone_date": "2020-09-23",
-                "description": "Update leaders.json to include \"Date Created information\"",
-                "owner": "Harold",
-                "project_name": "ORG Domain Email Offboarding",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-09-27",
-                "description": "Project \"A\" Complete ready for deployment",
-                "owner": "Christian",
-                "project_name": "ORG Domain Email Offboarding",
-                "status": "overdue"
-            },
-            {
                 "milestone_date": "2020-09-29",
                 "description": "Project \"A\" Regression testing complete",
                 "owner": "Harold",
@@ -658,7 +482,7 @@
                 "description": "Deploy Project \"B\" into production",
                 "owner": "Harold",
                 "project_name": "ORG Domain Email Offboarding",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-10-15",
